1997-04-30  Marcus G. Daniels  <marcus@cathcart.sysc.pdx.edu>

	* Makefile.in (clib-routines): Add htons not because it is necessary,
	but because libc5 systems will bring it in.
	(check-clib-routines): Tolerate extra weak symbols.

Wed Apr 30 14:12:12 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile.in: Delete duplicate rule for cross-mig.

Mon Apr 28 12:09:53 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile.in (check): New target.  Reported by
	xtest@postman.epa.go.jp. 

	* i386/Drivers.in (ncr53c7xx): Change file name to 53c78xx.o.
	* i386/i386at/gpl/linux/scsi/53c7,8xx.c: Moved to ...
	* i386/i386at/gpl/linux/scsi/53c78xx.c: ... here.
	* i386/Makefrag (linux-scsi-files): Change file name here too.
	Reported by xtest@postman.epa.go.jp.

Wed Apr 23 14:35:44 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* ipc/ipc_entry.c [MACH_KDB]: Add include of <kern/task.h>.

Wed Apr 23 13:21:23 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* configure.in (BUILD_CC): Use AC_CHECK_PROGS, not AC_CHECK_PROG,
	since we are checking multiple names.

	* configure.in (kdb): New --enable option.
	* Makefile.in (DEFINES): Add @DEFS@.
	* bogus/mach_kdb.h: Make this file zero length; we get MACH_KDB
	from configure now.

	* Makefile.in (clean, distclean, mostlyclean, maintainter-clean):
	New targets.  
	(all-archs-configures): New variable.  
	(MIG): Change to ./local-mig.
	(./local-mig): Change to build this instead of ./mig
	(check-clib-routines): Use nm -g in case there are local symbols.
	Suggested by Matthew Wilcox (willy@odie.barnet.ac.uk). 

Fri Apr 18 15:25:10 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* configure.in: Add AC_PREREQ for version 2.12.
	* i386/Drivers.in: Likewise.

Wed Apr 16 16:55:36 1997  Marcus G. Daniels  <marcus@cathcart.sysc.pdx.edu>

	* configure.in: Replace AC_PROG_CC with AC_PROG_CC_LOCAL.
	If cross compiling do Lex/Yacc checks with BUILD_CC.